2008-12-17  Ludovic Marcotte  <lmarcotte@inverse.ca>

	* src/calendar/base/content/sun-calendar-event-dialog.js
	We now clone the organizer before setting the SENT-BY
	* Bumped version number to 0.9.1pre11

2008-12-10  Ludovic Marcotte  <lmarcotte@inverse.ca>
	
	* Improved ITIP support in calendar-item-editing.js
	* Bumped version number to 0.9.1pre10

2008-12-09  Ludovic Marcotte  <lmarcotte@inverse.ca>

	* src/calendar/base/src/calTransactionManager.js
	Added a function to reset participation status
	to "NEEDS-ACTION" when there is a SEQUENCE update.
	* src/calendar/base/content/calendar-item-editing.js
	Added more cruft around the ITIP stupidify of 0.9
	to deal with recurrences.
	* Added fix for bug
	https://bugzilla.mozilla.org/show_bug.cgi?id=468723

2008-12-08  Ludovic Marcotte  <lmarcotte@inverse.ca>

	* Added src/patches/438964.diff (3rd patch
	of the bug report) and applied it.
	* We now correctly refresh our view when
	ACLs have changed.

2008-12-06  Ludovic Marcotte  <lmarcotte@inverse.ca>	

	* Modified src/calendar/base/src/calDavCalendar.js
	so implement a faster way of comparing items in order
	to detect if some were deleted from the server. We
	now use a hash table instead of an array.

2008-12-04  Ludovic Marcotte  <lmarcotte@inverse.ca>

	* Added the following files
	src/calendar/lightning/content/imip-bar.js
	src/patches/289038.diff
	We now correctly handle if we are the owner
	on the calendar in imip-bar.js
	* Added a hack around bug
	https://bugzilla.mozilla.org/show_bug.cgi?id=396182
	in calendar-item-editing.js

2008-12-03  Ludovic Marcotte  <lmarcotte@inverse.ca>

	* We now correctly refresh ACLs when going online
	and we refresh the view once they are loaded
	* Fixed bug https://bugzilla.mozilla.org/show_bug.cgi?id=429126
	* Replaced mReadOnly with readOnly in calDavCalendar.js
	so we correctly mark the calendar as a read-only one
	when there's a network error.
	* Bumped version number to 0.9.1pre7